# apcore-toolkit-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docs/: API_CONTRACT.md
src/: ai_enhancer.rs  binding_loader.rs  http_verb_map.rs  lib.rs  openapi.rs  resolve_target.rs  scanner.rs  schema_utils.rs  serializers.rs  types.rs
src/display/: mod.rs  resolver.rs
src/formatting/: markdown.rs  mod.rs  surface.rs  tabular.rs
src/output/: errors.rs  http_proxy_writer.rs  mod.rs  registry_writer.rs  types.rs  verifiers.rs  yaml_writer.rs
tests/: README.md  display_resolve_conformance.rs  public_api_integration.rs  scanner_verb_map_conformance.rs  tabular_conformance.rs
tests/fixtures/: scanner_verb_map.json
