[package]
name = "apcore-toolkit"
version = "0.5.0-rc.1"
edition = "2021"
description = "Shared scanner, schema extraction, and output toolkit for apcore framework adapters"
license = "Apache-2.0"
readme = "README.md"
authors = ["aiperceivable <tercel.yi@gmail.com>"]
homepage = "https://aiperceivable.com"
repository = "https://github.com/aiperceivable/apcore-toolkit-rust"
documentation = "https://github.com/aiperceivable/apcore-toolkit-rust#readme"
keywords = ["apcore", "mcp", "scanner", "schema", "toolkit"]
categories = [
    "api-bindings",
    "development-tools",
    "web-programming",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
apcore = ">=0.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
regex = "1"
syn = { version = "2", features = ["parsing", "full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "2"
async-trait = "0.1"
walkdir = "2"

# Used by ai_enhancer for synchronous SLM API calls (always included).
ureq = { version = "3", features = ["json"] }

[dependencies.reqwest]
version = "0.12"
features = ["json"]
optional = true

[features]
default = []
http-proxy = ["dep:reqwest"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
